wordpresshelm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello.world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: wordpress
                port:
                  number: 80
          - path: /wp-admin/install.php
            pathType: Prefix
            backend:  
              service:
                name: wordpress
                port:
                  number: 80
